--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div class="content-wrapper">
-      <header><h1>ChatterBot - Anderson Rocha</h1></header>
+      <header>
+        <h1><span>ChatterBot </span><span> Anderson Rocha</span></h1>
+      </header>
 
       <main>
         <div class="box-wrapper">
@@ -30,7 +32,10 @@
                 placeholder="Digite uma mensagem..."
                 autocomplete="off"
               />
-              <button>Enviar</button>
+              <button class="btn-send">
+                <span class="icon">&check;</span>
+                <span class="text">Enviar</span>
+              </button>
             </form>
           </div>
         </div>
